<resources>
    <string name="app_name">Blueish</string>
    <string name="nav_home">Home</string>
    <string name="nav_daily_activity">Daily Activity</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_media">Media</string>
    <string name="about">About :</string>
    <string name="abot">Just ordinary people who likes programming and eating</string>
    <string name="interest">Interest :</string>
    <string name="hobi">Hobby : Jogging</string>
    <string name="jogging">Jogging</string>
    <string name="makes_rendang_pizza">Makes : Rendang, Pizza</string>
    <string name="mikes_air_putih">Mikes : Air Putih</string>
    <string name="interest_future_money">Interest : Future, Money</string>
    <string name="cita_cita_kerja_di_perusahaan_besar">Cita-Cita : Kerja di perusahaan besar</string>
    <string name="todo">TODO</string>
    <string name="desc"><b>Easy Going Boy who like eating</b></string>
    <string name="phone">082318338423</string>
    <string name="welcome">Hi!\nWelcome To My Application</string>
    <string name="_1">1</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">facebook</string>
    <string name="maps">Maps</string>
    <string name="image">Image</string>
    <string name="todo">TODO</string>

</resources>
