<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_daily_activity"
        android:icon="@drawable/ic_activity_black_24dp"
        android:title="@string/nav_daily_activity" />

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_photo_black_24dp"
        android:title="@string/nav_gallery"/>

    <item
        android:id="@+id/nav_media"
        android:icon="@drawable/ic_play_circle_outline_black_24dp"
        android:title="@string/nav_media"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/nav_profile"/>

</menu>